# causal-graph-rag

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  DOMAINS.md  Dockerfile  LICENSE  PHASE2B_EXPANDED.md  README.md  STRUCTURE_FINDINGS.md  agentic_rag.py  api.py  causal_extractor.py  causal_graph.py  chernobyl.md  cli.py  demo.py  demo.tape  demo_agentic.py  demo_gif.py  demo_graph.py  demo_graph_live.py  demo_langchain.py  demo_mongo.py  demo_neo4j.py  demo_rinn.py  demo_structured.py  doc_structure.py  eval_multidomain.py  eval_multidomain_large.py  eval_ragas.py  eval_realdoc.py  eval_rebel_finetuned.py  eval_structure.py  eval_value.py  finetune_rebel.py  gen_questions.py  graph_rag.py  langchain_integration.py  llm_adapters.py  neo4j_graph.py  (+12 more)
.github/workflows/: ci.yml
assets/: README.md  make_demo_gif.py  make_mongo_gif.py
causal_graph_rag/: __init__.py  agentic_rag.py  api.py  causal_extractor.py  causal_graph.py  cli.py  graph_backend.py  graph_rag.py  langchain_integration.py  llm_adapters.py  mongo_graph.py  neo4j_graph.py  parser.py  pipeline.py
docs/: BUG_AUDIT.md  RESEARCH_NOTES.md
docs/superpowers/plans/: 2026-06-25-vsa-pathsig-bfs-mmr-extreme.md
eval_corpus/: build_corpus.py  corpus_questions.json  eval_models.py  gen_questions_corpus.py  registry.json  results_raw.json  screen_components.py  screen_results.json
tests/: conftest.py  test_agentic_rag.py  test_cli.py  test_core.py  test_doc_structure.py  test_entity_normalization.py  test_graph_queries.py  test_hybrid.py  test_langchain_integration.py  test_mongo_graph.py  test_persistence.py  test_retrieval_improvements.py  test_robustness.py  test_structure_integration.py  test_structured_context.py  test_vsa_semantic_weight.py
