[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-graph-rag"
version = "0.3.0"
description = "RAG that traverses cause-effect chains instead of returning similarity-matched chunks — multi-hop & root-cause retrieval with no query-time LLM."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "linga009", email = "lingamraju26@gmail.com" }]
keywords = ["rag", "retrieval", "causal", "knowledge-graph", "graphrag",
            "agentic-rag", "vsa", "llm", "langchain", "neo4j", "multi-hop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# Minimal core: in-memory graph, spaCy-free rule extraction, hashing dense.
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
# Stronger causal extraction (dependency parse, passive voice, compounds).
spacy = ["spacy>=3.7"]
# LLM backends — install the one(s) matching your API key.
groq = ["groq"]
gemini = ["google-genai"]
anthropic = ["anthropic"]
openai = ["openai"]
# REST API.
api = ["fastapi", "uvicorn"]
# LangChain integration.
langchain = ["langchain-core>=1.0", "langchain>=1.0", "langchain-groq>=1.0"]
# Persistent graph backend for >1M nodes.
neo4j = ["neo4j>=5.0"]
# Everything for development + tests.
dev = ["pytest", "fastapi", "uvicorn", "groq", "google-genai", "neo4j>=5.0"]

[project.urls]
Homepage = "https://github.com/linga009/causal-graph-rag"
Repository = "https://github.com/linga009/causal-graph-rag"

[project.scripts]
causal-rag = "causal_graph_rag.cli:main"

[tool.setuptools]
packages = ["causal_graph_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
